FIX: Readded the filter cause of contrast issues

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -26,15 +26,13 @@ header {
             filter: invert(1);
         }
         
-        img#top-left {
-            filter: invert(0);
-        }
+       
+         
     }
 
 
     
 
-}
 
 
 
